--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -114,7 +114,13 @@ time, mark, audio, video {
 }
 /* line 16, ../sass/_main-header.scss */
 .header_top .menu_dropdown {
-  display: block;
+  display: none;
+}
+@media (min-width: 481px) {
+  /* line 16, ../sass/_main-header.scss */
+  .header_top .menu_dropdown {
+    display: block;
+  }
 }
 @media (min-width: 641px) {
   /* line 16, ../sass/_main-header.scss */
@@ -122,7 +128,7 @@ time, mark, audio, video {
     display: none;
   }
 }
-/* line 22, ../sass/_main-header.scss */
+/* line 25, ../sass/_main-header.scss */
 .header_top .menu_dropdown ul {
   -webkit-font-smoothing: antialiased;
   text-shadow: 0 1px 0 #FFF;
@@ -131,7 +137,7 @@ time, mark, audio, video {
   padding: 0;
   width: 100%;
 }
-/* line 30, ../sass/_main-header.scss */
+/* line 33, ../sass/_main-header.scss */
 .header_top .menu_dropdown li {
   float: left;
   margin: 0;
@@ -139,7 +145,7 @@ time, mark, audio, video {
   position: relative;
   min-width: 100%;
 }
-/* line 37, ../sass/_main-header.scss */
+/* line 40, ../sass/_main-header.scss */
 .header_top .menu_dropdown a {
   font-family: 'Lato', sans-serif;
   font-size: 0.7em;
@@ -157,7 +163,7 @@ time, mark, audio, video {
   -o-transition: all .25s ease;
   transition: all .25s ease;
 }
-/* line 54, ../sass/_main-header.scss */
+/* line 57, ../sass/_main-header.scss */
 .header_top .menu_dropdown .dropdown {
   display: flex;
   flex-direction: row;
@@ -171,7 +177,7 @@ time, mark, audio, video {
   color: #fff;
   text-transform: uppercase;
 }
-/* line 66, ../sass/_main-header.scss */
+/* line 69, ../sass/_main-header.scss */
 .header_top .menu_dropdown .dropdown .icone {
   background-image: url("../img/flat_icones/list-menu.png");
   width: 25px;
@@ -179,11 +185,11 @@ time, mark, audio, video {
   float: left;
   margin-right: 0.5em;
 }
-/* line 75, ../sass/_main-header.scss */
+/* line 78, ../sass/_main-header.scss */
 .header_top .menu_dropdown li:hover a {
   background: #000;
 }
-/* line 78, ../sass/_main-header.scss */
+/* line 81, ../sass/_main-header.scss */
 .header_top .menu_dropdown li ul {
   float: left;
   left: 0;
@@ -198,36 +204,36 @@ time, mark, audio, video {
   -o-transition: all .25s ease;
   transition: all .25s ease;
 }
-/* line 92, ../sass/_main-header.scss */
+/* line 95, ../sass/_main-header.scss */
 .header_top .menu_dropdown li:hover ul {
   opacity: 1;
   top: 50px;
   visibility: visible;
 }
-/* line 97, ../sass/_main-header.scss */
+/* line 100, ../sass/_main-header.scss */
 .header_top .menu_dropdown li ul li {
   float: none;
   width: 100%;
 }
-/* line 101, ../sass/_main-header.scss */
+/* line 104, ../sass/_main-header.scss */
 .header_top .menu_dropdown li ul a:hover {
   background: #7e0312;
 }
-/* line 106, ../sass/_main-header.scss */
+/* line 109, ../sass/_main-header.scss */
 .header_top .menu_drop_main:after, .header_top .menu_drop_main:before {
   content: "";
   display: table;
 }
-/* line 110, ../sass/_main-header.scss */
+/* line 113, ../sass/_main-header.scss */
 .header_top .menu_drop_main:after {
   clear: both;
 }
-/* line 115, ../sass/_main-header.scss */
+/* line 118, ../sass/_main-header.scss */
 .header_top .menu_desk {
   display: none;
 }
 @media (min-width: 641px) {
-  /* line 115, ../sass/_main-header.scss */
+  /* line 118, ../sass/_main-header.scss */
   .header_top .menu_desk {
     display: flex;
     width: 90%;
@@ -235,7 +241,7 @@ time, mark, audio, video {
     margin-left: auto;
   }
 }
-/* line 124, ../sass/_main-header.scss */
+/* line 127, ../sass/_main-header.scss */
 .header_top .menu_desk .menu_desktop {
   display: flex;
   flex-direction: column;
@@ -244,12 +250,12 @@ time, mark, audio, video {
   width: 100%;
 }
 @media (min-width: 641px) {
-  /* line 124, ../sass/_main-header.scss */
+  /* line 127, ../sass/_main-header.scss */
   .header_top .menu_desk .menu_desktop {
     flex-direction: row;
   }
 }
-/* line 134, ../sass/_main-header.scss */
+/* line 137, ../sass/_main-header.scss */
 .header_top .menu_desk .menu_desktop li .menu_items {
   font-family: 'Lato', sans-serif;
   font-size: 0.7em;
@@ -260,94 +266,110 @@ time, mark, audio, video {
   margin-right: 20px;
   position: right;
 }
-/* line 144, ../sass/_main-header.scss */
+/* line 147, ../sass/_main-header.scss */
 .header_top .menu_desk .menu_desktop li .menu_items:hover {
   color: #983541;
 }
 
-/* line 154, ../sass/_main-header.scss */
+/* line 157, ../sass/_main-header.scss */
 .intro_section {
   background-color: lightgreen;
 }
-/* line 157, ../sass/_main-header.scss */
+/* line 160, ../sass/_main-header.scss */
 .intro_section .slide {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0% 0px;
   width: 100%;
-  height: 16em;
+  height: 28em;
 }
 @media (min-width: 641px) {
-  /* line 157, ../sass/_main-header.scss */
+  /* line 160, ../sass/_main-header.scss */
   .intro_section .slide {
-    height: 42em;
+    height: 33em;
   }
 }
-/* line 168, ../sass/_main-header.scss */
+@media (min-width: 961px) {
+  /* line 160, ../sass/_main-header.scss */
+  .intro_section .slide {
+    height: 50em;
+  }
+}
+@media (min-width: 1281px) {
+  /* line 160, ../sass/_main-header.scss */
+  .intro_section .slide {
+    height: 53em;
+  }
+}
+/* line 176, ../sass/_main-header.scss */
 .intro_section .slide #caption {
-  /*background-color:lightgreen;*/
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  /*width: 55%;*/
-  height: AUTO;
-  line-height: 24px;
-  border-width: 0px;
-  margin-right: 25%;
-  margin-left: 25%;
-  padding: 0px;
-  letter-spacing: 0px;
-  font-weight: 400;
-  font-size: 16px;
-  text-align: center;
+  padding-top: 2em;
 }
 @media (min-width: 641px) {
-  /* line 168, ../sass/_main-header.scss */
+  /* line 176, ../sass/_main-header.scss */
   .intro_section .slide #caption {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    /*width: 55%;*/
-    height: AUTO;
-    line-height: 24px;
-    border-width: 0px;
-    margin-right: 25%;
-    margin-left: 25%;
-    margin-top: 20em;
-    padding: 0px;
-    letter-spacing: 0px;
-    font-weight: 400;
-    font-size: 16px;
-    text-align: center;
-    position: absolute;
+    padding-top: 4em;
   }
 }
-/* line 206, ../sass/_main-header.scss */
-.intro_section .slide #caption h2 {
-  font-family: 'Lato', sans-serif;
-  font-size: 2.8em;
-  font-weight: 600;
-  text-transform: Uppercase;
-  color: white;
+@media (min-width: 961px) {
+  /* line 176, ../sass/_main-header.scss */
+  .intro_section .slide #caption {
+    padding-top: 3em;
+  }
 }
-/* line 213, ../sass/_main-header.scss */
+@media (min-width: 1281px) {
+  /* line 176, ../sass/_main-header.scss */
+  .intro_section .slide #caption {
+    padding-top: 4em;
+  }
+}
+/* line 187, ../sass/_main-header.scss */
+.intro_section .slide #caption .logo {
+  background-image: url("../img/img_bg/logo_bistrot_des_anges_210.svg");
+  width: 210px;
+  height: 300px;
+  background-repeat: no-repeat;
+  margin: auto;
+}
+@media (min-width: 961px) {
+  /* line 187, ../sass/_main-header.scss */
+  .intro_section .slide #caption .logo {
+    background-image: url("../img/img_bg/logo_bistrot_des_anges_420.svg");
+    width: 420px;
+    height: 600px;
+  }
+}
+/* line 200, ../sass/_main-header.scss */
 .intro_section .slide #caption .caption_title {
   font-family: 'Lato', sans-serif;
-  font-size: 1em;
+  font-size: 0.8em;
   font-weight: 600;
   text-transform: Uppercase;
   color: #fff;
+  text-align: center;
+  padding-top: 2em;
 }
 @media (min-width: 641px) {
-  /* line 213, ../sass/_main-header.scss */
+  /* line 200, ../sass/_main-header.scss */
   .intro_section .slide #caption .caption_title {
-    font-size: 2.8em;
+    font-size: 1em;
   }
 }
-/* line 227, ../sass/_main-header.scss */
+@media (min-width: 961px) {
+  /* line 200, ../sass/_main-header.scss */
+  .intro_section .slide #caption .caption_title {
+    padding-top: 1em;
+    font-size: 1.5em;
+  }
+}
+@media (min-width: 1285px) {
+  /* line 200, ../sass/_main-header.scss */
+  .intro_section .slide #caption .caption_title {
+    padding-top: 1.5em;
+  }
+}
+/* line 224, ../sass/_main-header.scss */
 .intro_section #bg_img {
   background-image: url("../img/img_restau/restau_gen.jpg");
   background-size: cover;
